Fixed mobile upper alignment

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,11 @@ i {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
+}
 
+.upper {
+	display: flex;
+	align-items: center;
 }
 
 #flex-title {
